--- a/package.json
+++ b/package.json
@@ -10,13 +10,14 @@
   },
   "dependencies": {
     "@heroicons/react": "^2.0.18",
-    "@react-pdf/renderer": "^3.1.12",
+    "@react-pdf/renderer": "^3.1.10",
     "@reduxjs/toolkit": "^1.9.6",
     "framer-motion": "^10.16.4",
     "next": "latest",
     "pdfjs": "^2.5.2",
     "pdfjs-dist": "^3.11.174",
     "react": "latest",
+    "react-colorful": "^5.6.1",
     "react-contenteditable": "^3.3.7",
     "react-dom": "latest",
     "react-frame-component": "^5.2.6",
